# SoLE

./: CMakeLists.txt  CmakeLists.txt  SoLE.cpp  SoLE_3.cpp  main.cpp  matrix.hpp  methods.hpp  someFunc.hpp  src.h  src.hpp  vector.h  vector.hpp
include/: CWindow.h  CustomMatrix.h  imconfig.h  matrix.hpp  methods.h  methods.hpp  someFunc.h  someFunc.hpp  src.hpp  table.h  table.hpp
src/: CWindow.cpp  CustomMatrix.cpp  SoLE.cpp  main.cpp
